Fix a bug where the parsing of Integer was resulting in the value being  set to 0. Not sure why it was happening, but it was a strange way to  parse the Integer anyway